config/7-traffic-management/lab4/vs-reviews-timeout.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  exportTo:
  - back
  - front
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
    timeout: 0.5s
